slight changes to blog

--- a/_posts/2018-09-01-blog-post-6.md
+++ b/_posts/2018-09-01-blog-post-6.md
@@ -14,7 +14,7 @@ tags:
   - tennis
 ---
 
-The Sophomore Summer at Dartmouth is, according to legend, a glorious term of warm weather, class bonding, and free time.
+According to legend, the Sophomore Summer at Dartmouth is a glorious term of warm weather, class bonding, and free time.
 
 Classes
 ------
@@ -22,7 +22,7 @@ My classes this term consisted of Software Design and Engineering (COSC 50), Lin
 
 **Reading Course in Generative Adversarial Networks:** This was an independent study with Eugene Santos in the engineering department. I was given the freedom to explore some new ideas using generative adversarial nets (GANs) to create synthetic images of colleges campuses, as well as realistic lung biopsy images. Further into the course, I also explored whether machine learning can be used to analyze the history of the Israeli-Palestine conflict (more to come, hopefully).
 
-**Software Design and Engineering:** This is said to be one of the core classes for the CS major at Dartmouth, but it was basically programming in C. Xia Zhou is one of the most enthusiastic and well-organized professors I've had. It was useful to get some formal training in terminal and git, but the assignments were tough. This course made me realize how lucky I am to not have to worry about pointers or memory when programming in Python. 
+**Software Design and Engineering:** This is said to be one of the core classes for the CS major at Dartmouth, but it was basically a course on C programming. Xia Zhou is one of the most enthusiastic and well-organized professors I've had. It was useful to get some formal training in terminal and git, but the assignments were tough. This course made me realize how lucky I am to not have to worry about pointers or memory when programming in Python. 
 
 **Linear Algebra:** Linear algebra is probably the most applicable math class I've ever taken. I was less into the proofs and more into the real-world applications of matrices (there are a lot of them).
 
@@ -31,9 +31,9 @@ Activities
 
 **Protago Labs:** I continued to work for Protago Labs, a small AI company I've been working at for more than a year now. I worked on cleaning data and adding evaluation metrics for our conversational chatbot.
 
-**Research:** It took long enough, but I was finally able to wrap up my research in using deep learning to read lung adenocarcinoma histology patterns. I finished training of our model and it does as well as pathologists on our test set! The feeling of getting something new to work for the first time is absolutely incredible. There have only been a two times in my life when I couldn't fall asleep since I was so engrossed in trying to solve a problem, and both times were for this project.
+**Research:** It took long enough, but I was finally able to wrap up my research project in using deep learning to read lung adenocarcinoma histology patterns. I finished training of our model and it does as well as pathologists on our test set! The feeling of getting something new to work for the first time is absolutely incredible. There have only been a two times in my life when I couldn't fall asleep since I was so engrossed in trying to solve a problem, and both times were for this project. I'm currently writing the paper.
 
-**Sailing:** I had heard good things about the summer sailing class, so I went out of my way to take it even though I didn't need the PE credit. Being on the water was really relaxing. It reminded me of my crew days back in high school, except there wasn't anyone yelling at me to row faster.
+**Sailing:** I had heard good things about the summer sailing class, so I went out of my way to take it even though I didn't need the PE credit. I had a lot of fun meeting new people and learning how to sail. It reminded me of my crew days back in high school, except more relaxing since there wasn't anyone yelling at me to row faster.
 
 **Tennis:** I played tennis about once a week with friends. It's hard to make time to hit when I'm busy with other things, even though I really enjoy tennis.
 
@@ -42,24 +42,24 @@ Personal
 
 **Kappa Kappa Kappa Fraternity**
 
-I joined the [Kappa Kappa Kappa (Tri-Kap) fraternity](https://en.wikipedia.org/wiki/Kappa_Kappa_Kappa) this summer. Tri-Kap has a history predating the civil war, and accoridng to wikipedia is the oldest local fraternity in the country. I really enjoyed getting to know all my brothers, even though I probably spent too many nights hanging out into the wee hours of the morning. However, I think that being in a fraternity is an experience that is unique to college and Dartmouth, and I'm glad I joined.
+I joined the [Kappa Kappa Kappa (Tri-Kap) fraternity](https://en.wikipedia.org/wiki/Kappa_Kappa_Kappa) this summer. Tri-Kap has a history predating the civil war, and is the oldest local fraternity in the country (according to wikipedia). I really enjoyed getting to know all my brothers, even though I probably spent too many nights hanging out until the wee hours of the morning. However, I think that being in a fraternity is an experience that is unique to college and Dartmouth, and I'm glad I joined.
 
 <img src='/images/formal.jpg' width="49%">
 <img src='/images/trikap_summer.jpg' width="49%">
-Left, our end-of-term formal; right, class picture. 
+Left, our end-of-term formal; right, Tri-Kap '20s class picture. 
 
 **Reading**
 
 I read my first Stephen King book, *Misery*. It was a pretty thrilling book, although less horrific than I had expected. King is absolutely an amazing writer. For me, most good writing has the effect of flowing smoothly such that reading becomes so effortless that it feels like thinking. However, King's writing was *noticeably* good. I'm definitely going to be reading more King in the future.
 
-I also read the third book in the Girl with the Dragon Tattoo series, *The Girl who Beat the Hornet's Nest*. These books never fail to keep awake reading until 2 or 3am in the morning. Sadly, this is the last one in the series written by Stieg Larsson. 
+I also read the third book in the Girl with the Dragon Tattoo series, *The Girl Who Beat the Hornet's Nest*. These books never fail to keep awake reading until 2 or 3 am in the morning. Sadly, this is the last one in the series written by Stieg Larsson. 
 
 **Eric & Shirley**
 
-My friends Eric and Shirley came up from Virginia to visit for a weekend. We had a great time kayaking, hiking, sailing, and playing poker. There isn't much to do in the New Hampshire mountains for more than a couple of days, but it's always a blast hanging out with them. They were both mildly triggered when I said that the CVS, which was a 10 minute walk away, was "far". (Apparently, there is a lot more walking to be done at Duke and NYU.) My family is really close with both Eric's and Shirley's, and they know me better than anyone. 
+My friends Eric and Shirley came up from Virginia to visit for a weekend. We had a great time kayaking, hiking, sailing, eating gelato, playing poker, and hanging out in frats. There isn't much to do in the New Hampshire mountains for more than a couple of days, but it's always a blast hanging out with them. They were both mildly triggered when I said that the CVS, which was a 10 minute walk away, was "far". (Apparently, there is a lot more walking to be done at Duke and NYU.) My family is really close with both Eric's and Shirley's, and they know me better than anyone. 
 
 <img src='/images/gile_mountain_2.jpg' width="60%">
-<img src='/images/gile_mountain.jpg' width="39%">
+<img src='/images/gile_mountain.jpg' width="36.5%">
 Pictures from our hike at Gile Mountain. 
 
 Closing
