--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -41,7 +41,7 @@ Whole slide lung images. Ask me about them.
 **Tennis:** Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 <img src='/images/2.png' width="99%">
-Left, Dartmouth men's epee: me, Frank, Christian, Raph. 
+Dartmouth men's epee: me, Frank, Christian, Raph. 
 
 Personal
 ------
