--- a/_posts/2018-09-01-blog-post-6.md
+++ b/_posts/2018-09-01-blog-post-6.md
@@ -50,7 +50,7 @@ Left, our end-of-term formal; right, Tri-Kap '20s class picture.
 
 **Reading**
 
-I read my first Stephen King book, *Misery*. It was a pretty thrilling book, although less horrific than I had expected. King is absolutely an amazing writer. For me, most good writing has the effect of flowing smoothly such that reading becomes so effortless that it feels like thinking. However, King's writing was *noticeably* good. I'm definitely going to be reading more King in the future.
+I read Stephen King's *Misery*, which is about a famous novelist kept hostage by a crazy fan and forced to write a new book. I will admit that King is an incredible storyteller. I always thought that good writing meant clarity to allow the reader to focus on content, but when reading this book, I stopped more than once to note how good King's writing was. His use of metaphors was natural, his word choice so deliberate, and his control of language was masterful. Though the book was actually quite tame and I would have liked more action, the plot was engaging because each piece of the story was intentionally crafted from beginning to end. King says to never use adverbs since there is always a perfect verb, and I just broke that rule in the previous sentence.
 
 I also read the third book in the Girl with the Dragon Tattoo series, *The Girl Who Beat the Hornet's Nest*. These books never fail to keep awake reading until 2 or 3 am in the morning. Sadly, this is the last one in the series written by Stieg Larsson. 
 
