update about croatia

--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -40,6 +40,12 @@ Closing
 
 One of reasons I wanted to study abroad was so I could travel on weekends. 
 
+Croatia
+------
+**Zagreb:** Zagreb is a nice little city. We stayed in different family-run hotels (around $70), and they were both within five minutes of the square, which is incredible for the price. I really enjoyed the food there. You could get a full meal at a restaurant for ~$5, and Croatian food is delicious. Croissants and cheesy bread in the street shops were only 1 kuna = 0.15 dollars. Our flight back got canceled, so we got to stay in the five star Sheraton Zagreb. I had a relaxing night there (they had a nice gym and spa). 
+
+**Plitvice Lakes National Park:** This is a beautiful park with wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, this park is terribly crowded (lots of tourists from Korea), even though we went off-season. 
+
 Denmark
 ------
 **Copenhagen:** Copenhagen is a nice-looking city, with great culture and nightlife. I really liked Nyhavn, which is the port with all the colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, so the nightlife and culture is unique. 
