add venice stuff

--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -26,6 +26,7 @@ The Technical University of Denmark
 Reading
 ------
 
+I read The *Girl in the Spider's Web* by David Lagercrantz on the flight/layover to Zagreb. For those familiar with the book, I found Camilla to be an incredibly fascinating character. Apparently they're making a movie based on the book, but from the trailers it doesn't seem to follow the book closely. I also read the sequel *The Girl Who Takes an Eye for an Eye*, the next weekend. I was glad to see that Lisbeth (the protagonist) started doing deep learning for human pose detection, although I felt that it didn't really fit well or have an important role in the plot overall. After finishing the Millenium series, I'm a bit sad that there will be no more books.
 
 <img src='/images/poly_spa.jpg' width="32%">
 
@@ -40,6 +41,10 @@ Closing
 
 One of reasons I wanted to study abroad was so I could travel on weekends. 
 
+Italy
+------
+**Venice:** I really liked Venice. It was cool to see that they exclusively used canals instead of roads; even the ambulance was a boat. The city was quite small and there was always a vibrant life to it, with tourists walking around and cafes on every street. I saw Doge's palace, which had many grand chambers where all the walls and ceilings were filled with beautiful murals. There was indeed good pizza and gelato. In fact, I had pizza for all my meals.
+
 Croatia
 ------
 **Zagreb:** Zagreb is a nice little city. We stayed in different family-run hotels (around $70), and they were both within five minutes of the square, which is incredible for the price. I really enjoyed the food there. You could get a full meal at a restaurant for ~$5, and Croatian food is delicious. Croissants and cheesy bread in the street shops were only 1 kuna = 0.15 dollars. Our flight back got canceled, so we got to stay in the five star Sheraton Zagreb. I had a relaxing night there (they had a nice gym and spa). 
@@ -48,7 +53,7 @@ Croatia
 
 Denmark
 ------
-**Copenhagen:** Copenhagen is a nice-looking city, with great culture and nightlife. I really liked Nyhavn, which is the port with all the colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, so the nightlife and culture is unique. 
+**Copenhagen:** Copenhagen has great culture and nightlife. I really liked Nyhavn, which is the port with all the colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, so the nightlife and culture is unique. 
 
 **Møns Klint:** When my friend Naren came to visit for the weekend, Naren, Prahlad, and I went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
 
