--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -5,7 +5,7 @@ permalink: /posts/2018/12/blog-post-7/
 tags:
   - denmark
   - technical university of denmark
-  - lyngby
+  - lyngby	
   - copenhagen
   - naerum
   - linde alle
@@ -14,21 +14,30 @@ tags:
 The Technical University of Denmark
 ------
 
-
-
 -living in denmark
 -biking
--classes: appreciating dartmouth
--travels
 
+Scandinavian countries: finland, denmark, norway, have higher rates of happiness: maybe this is because people are not so focused on things like how successful their careers are or how much money they have, but rather their family and relationships. Maybe this is related to income inequality?
 
+I lived in a single apartment in Linde Alle, a brand new apartment complex for international students studying at DTU. It was really nice having my own place, and I enjoyed cooking. Whenever I was home, I usually cooked both lunch and dinner, so I ate a variety of meals: beef pasta, chicken fried rice, salmon with broccoli, turkey-egg sandwiches, fried potatoes, and sloppy joes. Food (from grocery stores) in Denmark was a bit cheaper than in the US, which was nice, and the nearest grocery store was only two minutes from my apartment by bike.
+
+Mid-October, during the fall break, I got sick with tonsilitis. Luckily, Denmark has universal health insurance, so at 9:00am monday morning I went to the doctor assigned to me on my health insurance card, and I was able to make an appointment for 10:15. He then referred me to an ENT specialist nearby, who I went to see right away. He told me I just needed antibiotic treatment, and on my way home I was able to pick up the medicine. For my first time seeking medical care by myself, this process was made easy and I got my antibiotics a couple hours after asking to make an appointment. (Not to mention, seeing the doctors was free.)
+
+Classes
+------
+I took four classes at DTU: Deep Learning, Image Analysis, Algorithms, and Applied Cryptography. Studying at a college other than Dartmouth allowed me to realize how much I appreciate being at a small liberal arts college. The most immediate shock was how big the classes were. At Dartmouth, I considered a typical class to have around twenty students, and larger classes to have fifty or more. At DTU, many of the classes I went to were held in auditoriums, and had over a hundred students. (Although apparently even this is small, my Cornell friends say they have classes with over a thousand students). Because of these large classes sizes, I got the feeling that professors approached class with the mindset of getting all students to learn some pre-determined course content, rather than guiding a group of individuals to learn how to think.
+
+That being said, the content and teaching of some courses was quite good. I was surprised by the variety of projects offered by the Deep Learning class, and I really liked the content and effective teaching in my algorithms course. My deep learning professor recommended a Deep Learning Workshop hosted by Microsoft at their office in Copenhagen, which I went to. I thought it was pretty good, but about half the people there had no experience and the other half had some experience, so the material covered were somewhere inbetween and ended up being not so helpful for either group. I did enjoy a talk given by Akshay Pai, a PostDoc at the University of Copenhagen, about his research classifying brain CT images. A lot of the challenges in his work (namely, data collection and annotation) were almost exactly the same as the ones I faced in my own research classifying lung biopsy images.
 
 Reading
 ------
-
-I read The *Girl in the Spider's Web* by David Lagercrantz on the flight/layover to Zagreb. For those familiar with the book, I found Camilla to be an incredibly fascinating character. Apparently they're making a movie based on the book, but from the trailers it doesn't seem to follow the book closely. I also read the sequel *The Girl Who Takes an Eye for an Eye*, the next weekend. I was glad to see that Lisbeth (the protagonist) started doing deep learning for human pose detection, although I felt that it didn't really fit well or have an important role in the plot overall. After finishing the Millenium series, I'm a bit sad that there will be no more books.
+I read The *Girl in the Spider's Web* by David Lagercrantz on the flight/layover to Zagreb. For those familiar with the book, I found Camilla to be an incredibly fascinating character. Apparently they're making a movie based on the book, but from the trailers it doesn't seem to follow the book closely. I also read the sequel *The Girl Who Takes an Eye for an Eye*, the next weekend. I was glad to see that Lisbeth (the protagonist) started doing deep learning for human pose detection, although I felt that it didn't really fit well or have an important role in the plot. After finishing the Millenium series, I'm a bit sad that there will be no more books.
 
 <img src='/images/poly_spa.jpg' width="32%">
+
+Start with Why
+
+Side by Side
 
 Closing
 ------
@@ -41,19 +50,35 @@ Closing
 
 One of reasons I wanted to study abroad was so I could travel on weekends. 
 
+Netherlands
+------
+**Amsterdam:** Amsterdam is known for its touristy red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in such a liberal city where drugs and prostitution was legal and accepted. I spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, which I saw a couple of years ago). I also visited Holland Casino, but since I went on a saturday night there was unfortuantely a queue of a couple of hours to get onto a No Limit Hold-em table, so I just watched for a little bit and then left.
+
+**Zaanse Schans:** Zaanse Schans is a historic town near amsterdam with windmills and distinctive wooden houses. Though touristy, seeing the old windmills, dainty houses, and farming facilities made me feel like I was walking through a cozy 20th century Dutch town near the countryside where people made their own milk and cheese. 
+
+Germany
+------
+**Munich:** Visiting Munich with Prahlad and Naren during Oktoberfest was a lot of fun! On the first day, we went to Oktoberfest, a the world's largest beer festival (apparently more than 6 million people attend every year). We all had a good time drinking the tasty German beer. Drinking is a much larger part of European culture than American, because in most European countries, the drinking age is 18 (sometimes 16). Since housing was so expensive due to the festival, we stayed in a campsite hosted by Stoke Travel. It was basically a huge party ground where everyone stayed in tents, and there free beer and always people drinking.
+
+**Linderhof Palace & Neuschwanstein Castle:** The second day, we went on a day tour to visit two castles in the area: Linderhof Palace and Neuschwanstein Castle. Linderhof was not exceedingly large in size, but each room inside was luxuriously decorated with incredible detail and made me feel poor and insignificant. Neuschwanstein Castle is a beautiful castle in the middle of the mountains, with fantastic views on all sides. I wish I could have stayed for longer.
+
 Italy
 ------
 **Venice:** I really liked Venice. It was cool to see that they exclusively used canals instead of roads; even the ambulance was a boat. The city was quite small and there was always a vibrant life to it, with tourists walking around and cafes on every street. I saw Doge's palace, which had many grand chambers where all the walls and ceilings were filled with beautiful murals. There was indeed good pizza and gelato. In fact, I had pizza for all my meals.
 
 Croatia
 ------
-**Zagreb:** Zagreb is a nice little city. We stayed in different family-run hotels (around $70), and they were both within five minutes of the square, which is incredible for the price. I really enjoyed the food there. You could get a full meal at a restaurant for ~$5, and Croatian food is delicious. Croissants and cheesy bread in the street shops were only 1 kuna = 0.15 dollars. Our flight back got canceled, so we got to stay in the five star Sheraton Zagreb. I had a relaxing night there (they had a nice gym and spa). 
+**Zagreb:** Zagreb is a nice little city. My friend Prahlad and I stayed in different family-run hotels (around $70), and they were both within five minutes of the square, which is incredible for the price. I really enjoyed the food there. You could get a full meal at a restaurant for ~$5, and Croatian food is delicious. Croissants and cheesy bread in the street shops were only 1 kuna = 0.15 dollars. Our flight back got canceled, so we got to stay in the five star Sheraton Zagreb. I had a relaxing night there (they had a nice gym and spa). 
 
-**Plitvice Lakes National Park:** This is a beautiful park with wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, this park is terribly crowded (lots of tourists from Korea), even though we went off-season. 
+**Plitvice Lakes National Park:** This is a beautiful park of lakes and waterfalls accessible by wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, the park was terribly crowded (lots of tourists from Korea), even though we went off-season. 
 
 Denmark
 ------
 **Copenhagen:** Copenhagen has great culture and nightlife. I really liked Nyhavn, which is the port with all the colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, so the nightlife and culture is unique. 
 
 **Møns Klint:** When my friend Naren came to visit for the weekend, Naren, Prahlad, and I went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
+
+Closing
+------
+I'm incredibly grateful for this experience abroad. Being so far from my previous life helped me reflect on it from a new perspective.
 
