--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -19,7 +19,7 @@ The Technical University of Denmark
 
 Scandinavian countries: finland, denmark, norway, have higher rates of happiness: maybe this is because people are not so focused on things like how successful their careers are or how much money they have, but rather their family and relationships. Maybe this is related to income inequality?
 
-I lived in a single apartment in Linde Alle, a brand new apartment complex for international students studying at DTU. It was really nice having my own place, and I enjoyed cooking. Whenever I was home, I usually cooked both lunch and dinner, so I ate a variety of meals: beef pasta, chicken fried rice, salmon with broccoli, turkey-egg sandwiches, fried potatoes, and sloppy joes. Food (from grocery stores) in Denmark was a bit cheaper than in the US, which was nice, and the nearest grocery store was only two minutes from my apartment by bike.
+I lived in a single apartment in Linde Alle, a brand new apartment complex for international students studying at DTU. It was really nice having my own place, and I enjoyed cooking. Whenever I was home, I usually cooked both lunch and dinner, so I ate a variety of meals: beef pasta, chicken fried rice, pork chop, salmon with broccoli, turkey-egg sandwiches, fried potatoes, and sloppy joes. Food (from grocery stores) in Denmark was a bit cheaper than in the US, which was nice, and the nearest grocery store was only two minutes from my apartment by bike.
 
 Mid-October, during the fall break, I got sick with tonsilitis. Luckily, Denmark has universal health insurance, so at 9:00am monday morning I went to the doctor assigned to me on my health insurance card, and I was able to make an appointment for 10:15. He then referred me to an ENT specialist nearby, who I went to see right away. He told me I just needed antibiotic treatment, and on my way home I was able to pick up the medicine. For my first time seeking medical care by myself, this process was made easy and I got my antibiotics a couple hours after asking to make an appointment. (Not to mention, seeing the doctors was free.)
 
@@ -52,7 +52,7 @@ One of reasons I wanted to study abroad was so I could travel on weekends.
 
 Netherlands
 ------
-**Amsterdam:** Amsterdam is known for its touristy red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in such a liberal city where drugs and prostitution was legal and accepted. I spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, which I saw a couple of years ago). I also visited Holland Casino, but since I went on a saturday night there was unfortuantely a queue of a couple of hours to get onto a No Limit Hold-em table, so I just watched for a little bit and then left.
+**Amsterdam:** Amsterdam is known for its touristy red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in such a liberal city where drugs and prostitution was legal and accepted. I spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, which I saw a couple of years ago). I also visited Holland Casino, but since I went on a saturday night there was unfortuantely a queue of a couple of hours to get onto a No Limit Hold-em table, so I just watched for a little bit and then left. Heineken experience.
 
 **Zaanse Schans:** Zaanse Schans is a historic town near amsterdam with windmills and distinctive wooden houses. Though touristy, seeing the old windmills, dainty houses, and farming facilities made me feel like I was walking through a cozy 20th century Dutch town near the countryside where people made their own milk and cheese. 
 
